--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -184,6 +184,10 @@ p {
 .font-14{font-size: 14px; line-height: 1.71em;}
 .font-12{font-size: 12px; line-height: 1.83em;}
 
+.line-height-1{line-height: 1;}
+.line-height-1-2{line-height: 1.2;}
+.line-height-1-3{line-height: 1.3;}
+
 .weight-300{font-weight: 300;}
 .weight-400{font-weight: 400;}
 .weight-500{font-weight: 500;}
@@ -286,6 +290,13 @@ p {
 	-webkit-box-shadow: 0px 0px 28px rgba(0, 0, 0, .08);
 	-moz-box-shadow: 0px 0px 28px rgba(0, 0, 0, .08);
 	box-shadow: 0px 0px 28px rgba(0, 0, 0, .08);
+}
+
+.badge{
+	padding: .75em;
+}
+.page-link:focus{
+	box-shadow: none;
 }
 
 .bootstrap-select .dropdown-toggle{
@@ -738,8 +749,21 @@ textarea.form-control{
 .docs-buttons label{margin-bottom: 0;}
 .docs-buttons .btn{margin-bottom: 5px;}
 
-.table th{font-weight: 600;}
-.table-striped tbody tr:nth-of-type(odd){background: #ecf0f4;}
+.table thead th{
+	font-weight: 700;
+	font-size: 16px;
+	border-bottom: 0;
+	padding-left: 1rem;
+}
+.table td, .table th{
+	vertical-align: middle;
+}
+.table td{
+	font-size: 14px;
+	font-weight: 500;
+	padding: 1rem
+}
+.table-striped tbody tr:nth-of-type(odd){background: #eaeef2;}
 
 table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd{
 	background: #ECF0F3 !important;
@@ -748,10 +772,96 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover{
 	background: #ECF0F3 !important;
 }
 table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:hover.selected, table.dataTable tbody tr.selected{
-	background-color: #1b00ff !important;
+	background-color: #181f48 !important;
+	color: #ffffff;
 }
 table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected{
 	background-color: #1b00ff !important;
+}
+/* datatable style */
+table.dataTable thead .sorting:before, table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:before, table.dataTable thead .sorting_asc:after, table.dataTable thead .sorting_desc:before, table.dataTable thead .sorting_desc:after, table.dataTable thead .sorting_asc_disabled:before, table.dataTable thead .sorting_asc_disabled:after, table.dataTable thead .sorting_desc_disabled:before, table.dataTable thead .sorting_desc_disabled:after{
+	font-family: "dropways";
+	font-size: 14px;
+}
+table.dataTable thead .sorting:before, table.dataTable thead .sorting_asc:before, table.dataTable thead .sorting_desc:before, table.dataTable thead .sorting_asc_disabled:before, table.dataTable thead .sorting_desc_disabled:before{
+	content: "\eabb"
+}
+table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:after, table.dataTable thead .sorting_desc:after, table.dataTable thead .sorting_asc_disabled:after, table.dataTable thead .sorting_desc_disabled:after{
+	content: "\eaba";
+	right: 0.2em;
+}
+table.dataTable thead .sorting_asc:before, table.dataTable thead .sorting_desc:after{
+	color: #1b00ff;
+}
+div.dataTables_wrapper div.dataTables_info,
+div.dataTables_wrapper div.dataTables_paginate,
+.dataTables_length,
+div.dataTables_wrapper div.dataTables_filter,
+.dt-buttons{
+	padding-left: 15px;
+	padding-right: 15px;
+}
+.dt-checkbox{
+	width: 20px;
+	height: 20px;
+	position: relative;
+}
+.dt-checkbox input{
+	position: absolute;
+	opacity: 0;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	width: 20px;
+	height: 20px;
+	left: 0;
+	top: 0;
+}
+.dt-checkbox span{
+	position: relative;
+	display: block;
+	width: 20px;
+	height: 20px;
+	border: 1px solid #9e9e9e;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.dt-checkbox span:before{
+	content: "";
+	background: url(../images/check-mark.png) no-repeat;
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	left: 0;
+	top: -1px;
+	background-size: 12px 12px;
+	background-position: center center;
+	-webkit-transform: scale(0);
+	-moz-transform: scale(0);
+	-o-transform: scale(0);
+	-ms-transform: scale(0);
+	transform: scale(0);
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.dt-checkbox input:checked ~ span{
+	background: #1b00ff;
+	border-color: #1b00ff;
+	color: #ffffff;
+}
+.dt-checkbox input:checked ~ span:before{
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-o-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
 }
 
 .plyr{
@@ -925,11 +1035,11 @@ table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.o
 .user-info-dropdown .dropdown-menu{
 	min-width: 185px;
 }
-.user-info-dropdown .dropdown-item{
+.dropdown-menu-icon-list .dropdown-item{
 	position: relative;
 	padding-left: 45px;
 }
-.user-info-dropdown .dropdown-item i{
+.dropdown-menu-icon-list .dropdown-item i{
 	position: absolute;
 	left: 16px;
 	top: 50%;
@@ -1017,7 +1127,10 @@ table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.o
 }
 .header-dark .header .user-info-dropdown .dropdown-toggle,
 .header-dark .header .user-info-dropdown .dropdown-toggle .user-name{
-	color: #91a8b0;
+	color: #e4e4e4;
+}
+.header-dark .user-notification .dropdown-toggle{
+	color: #e4e4e4;
 }
 .header-dark .header .header-left .header-search .search-input{
 	background: rgba(236, 236, 236, 0.1);
@@ -1065,20 +1178,29 @@ table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.o
 	height: 70px;
 	border-bottom: 1px solid rgba(0,0,0,0.1);
 	display: table;
-	background: #ffffff;
 }
 .brand-logo a{
-	display: table-cell;
+	display: flex;
 	vertical-align: middle;
+	align-items: center;
 	position: relative;
+	height: 100%;
 	font-size: 22px;
 	color: #ffffff;
 	letter-spacing: 0.050em;
 	font-weight: 500;
 	line-height: 45px;
 	font-family: 'Muli', sans-serif;
-	padding: 0px 10px 0px;
-	text-align: center;
+	padding: 0px 20px 0px;
+}
+.brand-logo a .dark-logo,
+.sidebar-light .brand-logo a .light-logo{
+	display: none;
+}
+.brand-logo a .light-logo,
+.sidebar-light .brand-logo a .dark-logo
+{
+	display: block;
 }
 .brand-logo a span{
 	display: block;
@@ -1092,7 +1214,6 @@ table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.o
 .brand-logo a .svg{
 	max-width: 180px;
 	display: block;
-	margin: 0 auto;
 	height: auto;
 }
 .left-side-bar{
@@ -1142,7 +1263,7 @@ table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.o
 	display: none;
 }
 .sidebar-menu{
-	padding: 20px 0px 20px;
+	padding: 0px 0px 20px;
 }
 .sidebar-menu .dropdown-toggle{
 	display: block;
@@ -1531,6 +1652,10 @@ body.IE .register-page-wrap .container{
 .wizard-content .wizard.wizard-circle>.steps>ul>li.current~li:after{
 	background: rgba(24, 31, 72, .3);
 }
+.wizard-content .wizard.vertical.wizard-circle>.steps>ul>li.current~li:before,
+.wizard-content .wizard.vertical.wizard-circle>.steps>ul>li.current~li:after{
+	background-color: transparent;
+}
 .register-page-wrap .wizard-content .wizard > .steps > ul > li.current .step{
 	border-color: #1b00ff;
 	color: #181f48;
@@ -1737,21 +1862,25 @@ body.IE .register-page-wrap .container{
 	text-align:center;
 }
 
-.error-page:before {
-	content: "";
-	background: rgba(0,0,0,0.5);
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-}
 .error-page-wrap{
-	font-size: 22px;
+	font-size: 16px;
+	line-height: 26px;
+	font-weight: 700;
+	color: #222222;
 }
-.error-page-wrap a{
-	color: #94c5f9;
-	font-weight: 500;
+.error-page h1{
+	font-size: 210px;
+	font-weight: 800;
+	text-shadow: 2px 2px 0 #181f48, 4px 4px 0 #fff, 8px 8px 0 #181f48;
+	line-height: 1;
+	color: #181f48;
+}
+.error-page h3{
+	font-size: 18px;
+	text-transform: uppercase;
+	font-weight: 700;
+	margin-bottom: 30px;
+	padding-top: 30px;
 }
 
 .project-info{
@@ -3417,3 +3546,4 @@ body.IE .register-page-wrap .container{
 	width: 25%;
 	margin-bottom: 10px;
 }
+
